[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "zamp_public_workflow_sdk"
version = "0.0.138"
description = "Workflow Manager"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Zamp Engineering", email = "engineering@zamp.com" }]
urls = { Homepage = "https://github.com/zamp-engineering/workflow_manager" }

dependencies = [
    "pydantic",
    "temporalio==1.13.0",
    "python-dateutil",
    "python-dotenv",
    "sentry-sdk==2.41.0",
    "structlog",
]

[dependency-groups]
dev = [
    "cryptography==45.0.5",
    "deepdiff==8.4.2",
    "google-cloud-storage==2.11.0",
    "pandas>=2.2.2",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pre-commit",
]

[tool.setuptools.packages.find]
include = ["zamp_public_workflow_sdk*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

disable_error_code = [
    "no-redef",
    "attr-defined",
    "return-value",
    "assignment",
    "arg-type",
    "union-attr",
    "name-defined",
    "misc",
    "override",
    "var-annotated",
    "index",
    "valid-type"
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.coverage.run]
relative_files = true
